array.island.Island.scala.error
Erreur de compilation :
Island:5: error: identifier expected but integer literal found.
    while (num[i] != num[i+1]) {
                           ^Island:8: error: ']' expected but '}' found.
  }
  ^Island:10: error: ';' expected but 'return' found.
} return compteur
  ^Island:13: error: Unmatched closing brace '}' ignored here
}
^